--- a/index.html
+++ b/index.html
@@ -1,30 +1,14 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang=”es”>
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ejemplo de uso de emmet</title>
-    <link rel="stylesheet" href="css/styles.css">
+   <meta charset=”UTF-8”>
+   <meta http-equiv=”X-UA-Compatible” content=”IE=edge”>
+   <meta name=”viewport” content=”width=device-width, initial-scale=1.0”>
+   <title>Ejemplo sitio web</title>
+   <link rel=”stylesheet” href=”./css/styles.css”>
 </head>
 <body>
-    <h1>Titulo</h1>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quo, debitis?</p>
-    <table>
-       <tr>
-        <th>Nombre</th>
-        <th>Apellidos</th>
-        <th>Edad</th>
-       </tr>
-       <tr>
-        <td>Carlos</td>
-        <td>Gonzalez</td>
-        <td>Roman</td>
-       </tr>
-       <tr>
-        <td>Sebastian</td>
-        <td>Gonzalez</td>
-        <td>Roman</td>
-       </tr>
-    </table>
+    <h1>Bienvenidos a nuestro sitio web</h1>
+    <script src=”./js/main.js”></script>
 </body>
 </html>
